--- a/JiaoBaoYun-hb/html/mine/account-info.html
+++ b/JiaoBaoYun-hb/html/mine/account-info.html
@@ -99,9 +99,13 @@
 		<script src="../../js/utils/camera.js"></script>
 		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
 		<script src="../../js/utils/load.js"></script>
-		<script type="text/javascript" src="../../js/qiniu/plupload.full.min.js"></script>
-		<script type="text/javascript" src="../../js/qiniu/qiniu.js"></script>
-		<script type="text/javascript" src="../../js/utils/QiNiuUtil.js"></script>
+		<!--<script type="text/javascript" src="../../js/qiniu/plupload.full.min.js"></script>-->
+		<!--<script type="text/javascript" src="../../js/qiniu/qiniu.js"></script>-->
+		<!--<script type="text/javascript" src="../../js/utils/QiNiuUtil.js"></script>-->
+		<script type="text/javascript" src="../../js/utils/CloudFileUtil.js"></script>
+		<script type="text/javascript" src="../../js/utils/events.js"></script>
+		<script type="text/javascript" src="../../js/cloud/AndroidFileSystem.js"></script>
+		<script type="text/javascript" src="../../js/utils/UploadHeadImage.js"></script>
 		<script src="../../js/mine/account-info.js"></script>
 
 	</body>
