--- a/JiaoBaoYun-hb/html/quan/studentdynamic_main.html
+++ b/JiaoBaoYun-hb/html/quan/studentdynamic_main.html
@@ -17,9 +17,13 @@
 		<link rel="stylesheet" href="../../css/utils/common.css" />
 		<script src="../../js/mui.min.js"></script>
 		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
-		<script type="text/javascript" src="../../js/qiniu/plupload.full.min.js"></script>
-		<script type="text/javascript" src="../../js/qiniu/qiniu.js"></script>
-		<script type="text/javascript" src="../../js/utils/QiNiuUtil.js"></script>
+		<!--<script type="text/javascript" src="../../js/qiniu/plupload.full.min.js"></script>-->
+		<!--<script type="text/javascript" src="../../js/qiniu/qiniu.js"></script>-->
+		<!--<script type="text/javascript" src="../../js/utils/QiNiuUtil.js"></script>-->
+		<script type="text/javascript" src="../../js/utils/CloudFileUtil.js"></script>
+		<script type="text/javascript" src="../../js/utils/events.js"></script>
+		<script type="text/javascript" src="../../js/cloud/AndroidFileSystem.js"></script>
+		<script type="text/javascript" src="../../js/utils/UploadHeadImage.js"></script>
 		<style>
 			.mui-title {
 				/*标题居左*/
@@ -43,14 +47,6 @@
 			gestureConfig: {
 				doubletap: true
 			},
-			//			subpages: [{
-			//				url: 'studentdynamic_sub.html',
-			//				id: 'studentdynamic_sub.html',
-			//				styles: {
-			//					top: '45px',
-			//					bottom: '0px',
-			//				}
-			//			}]
 		});
 
 		var contentWebview = null;
@@ -73,7 +69,7 @@
 			//创建子页面
 			var sub = plus.webview.create('studentdynamic_sub.html', 'studentdynamic_sub.html', {
 				top: '45px',
-				bottom: '0px',
+				bottom: localStorage.getItem('$Statusbar'),
 			}, {
 				data: data
 			});
@@ -82,327 +78,18 @@
 			});
 			//---获取数据并传递数据---end---
 
-			//---七牛上传头像---start---
-			//获取个人信息
-			//var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
-			var pickButtonId = 'stuImage';
-			var getUpTokenUrl = 'http://192.168.0.178:8507/GetTokenProfilePhoto.ashx'; //'http://192.168.0.178:8507/QiuToken.ashx';
-			var myDate = new Date();
-			var filePath = 'stuimg' + data.studentId + '.png';
-
-			console.log('filePath:' + filePath);
-			var domain = 'http://oh2zmummr.bkt.clouddn.com/'; //'http://o9u2jsxjm.bkt.clouddn.com/';
-			// 设置上传的参数
-			// 等待的对话框
-			var wdQN = null;
-			var uploader = Qiniu.uploader({
-				runtimes: 'html5,flash,html4', // 上传模式，依次退化
-				browse_button: pickButtonId, // 上传选择的点选按钮，必需
-				// 在初始化时，uptoken，uptoken_url，uptoken_func三个参数中必须有一个被设置
-				// 切如果提供了多个，其优先级为uptoken > uptoken_url > uptoken_func
-				// 其中uptoken是直接提供上传凭证，uptoken_url是提供了获取上传凭证的地址，如果需要定制获取uptoken的过程则可以设置uptoken_func
-				// uptoken : '<Your upload token>', // uptoken是上传凭证，由其他程序生成
-				// uptoken_url: '/uptoken',         // Ajax请求uptoken的Url，强烈建议设置（服务端提供）
-				uptoken_func: function(file) { // 在需要获取uptoken时，该方法会被调用
-					wdQN = plus.nativeUI.showWaiting(storageKeyName.WAITING);
-					var uptoken = '';
-					mui.ajax(getUpTokenUrl, {
-						async: false,
-						data: {
-							Key: filePath
-						},
-						dataType: 'json', //服务器返回json格式数据
-						type: 'post', //HTTP请求类型
-						timeout: 10000, //超时时间设置为10秒；
-						//							headers: {
-						//								'Content-Type': 'application/json'
-						//							},
-						success: function(data) {
-							//服务器返回响应，根据响应结果，分析是否登录成功；
-							uptoken = data.uptoken;
-							console.log('获取七牛上传token成功:' + uptoken);
-						},
-						error: function(xhr, type, errorThrown) {
-							//异常处理；
-							console.log('获取七牛上传token失败：' + type);
-							mui.toast('上传出错');
-							wdQN.close();
-						}
-					});
-					return uptoken;
-				},
-				get_new_uptoken: true, // 设置上传文件的时候是否每次都重新获取新的uptoken
-				// downtoken_url: '/downtoken',
-				// Ajax请求downToken的Url，私有空间时使用，JS-SDK将向该地址POST文件的key和domain，服务端返回的JSON必须包含url字段，url值为该文件的下载地址
-				// unique_names: true,              // 默认false，key为文件名。若开启该选项，JS-SDK会为每个文件自动生成key（文件名）
-				//save_key: true, // 默认false。若在服务端生成uptoken的上传策略中指定了sava_key，则开启，SDK在前端将不对key进行任何处理
-				domain: domain, // bucket域名，下载资源时用到，必需
-				//container: 'container',             // 上传区域DOM ID，默认是browser_button的父元素
-				max_file_size: '100mb', // 最大文件体积限制
-				flash_swf_url: 'js/qiniu/Moxie.swf', //引入flash，相对路径
-				max_retries: 0, // 上传失败最大重试次数
-				dragdrop: false, // 开启可拖曳上传
-				//drop_element: 'container',          // 拖曳上传区域元素的ID，拖曳文件或文件夹后可触发上传
-				chunk_size: '4mb', // 分块上传时，每块的体积
-				auto_start: true, // 选择文件后自动上传，若关闭需要自己绑定事件触发上传
-				//					resize: {
-				//						width: 100,
-				//						height: 100,
-				//						crop: false,
-				//						quality: 90,
-				//						preserve_headers: true
-				//					},
-				//x_vars : {
-				//    查看自定义变量
-				//    'time' : function(up,file) {
-				//        var time = (new Date()).getTime();
-				// do something with 'time'
-				//        return time;
-				//    },
-				//    'size' : function(up,file) {
-				//        var size = file.size;
-				// do something with 'size'
-				//        return size;
-				//    }
-				//},
-				init: {
-					'FilesAdded': function(up, files) {
-						plupload.each(files, function(file) {
-							// 文件添加进队列后，处理相关的事情
-							console.log('---文件添加进队列后---' + JSON.stringify(file));
-							// 等待的对话框
-						});
-					},
-					'BeforeUpload': function(up, file) {
-						// 每个文件上传前，处理相关的事情
-						console.log('---每个文件上传前---');
-					},
-					'UploadProgress': function(up, file) {
-						// 每个文件上传时，处理相关的事情
-						console.log('文件上传时：' + JSON.stringify(file));
-						console.log('上传进度：' + file.percent);
-					},
-					'FileUploaded': function(up, file, info) {
-						console.log('---上传成功---');
-						console.log('file:' + JSON.stringify(file));
-						console.log('info:' + info);
-						var myDate = new Date();
-						var stuImgePath = domain + JSON.parse(info).key + '?' + myDate.getTime(); //群头像
-						console.log('stuImgePath:' + stuImgePath);
-						//23.通过用户资料ID或关联ID更改各类型资料
-						//所需参数
-						var comData = {
-							vtp: 'stu', //更新资料类型,stu:学生,tec:老师,gen:家长关系
-							stuid: data.studentId, //资料ID,更新学生老师必填,关系留0
-							stuname: data.studentName, //资料名称
-							stuimg: stuImgePath, //资料头像,学生必填,其他留0
-							job: '', //职位,老师必填,其他留空
-							title: '', //职称,老师必填,其他留空
-							expsch: '', //教龄,老师必填,其他留空
-							sub: '', //科目,老师必填,其他留空
-							ustuid: '', //关联ID,更新与家长关系必填,其他留空
-							urel: '' //关系,更新与家长关系必填,其他留空
-						};
-						//返回值model：model_groupList
-						// 等待的对话框
-						var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
-						postDataPro_PostReStu(comData, wd, function(data) {
-							wd.close();
-							console.log('8.90909090success:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
-							if(data.RspCode == 0) {
-								console.log('修改资料头像成功');
-								mui.toast('修改资料头像成功');
-							} else {
-								mui.toast(data.RspTxt);
-							}
-						});
-						wdQN.close();
-					},
-					'Error': function(up, err, errTip) {
-						//上传出错时，处理相关的事情
-						console.log('---上传出错---');
-						console.log('err' + JSON.stringify(err));
-						console.log('errTip' + JSON.stringify(errTip));
-						mui.toast('上传出错');
-						wdQN.close();
-					},
-					'UploadComplete': function() {
-						//队列文件处理完毕后，处理相关的事情
-						console.log('---队列文件处理完毕后---');
-					},
-					'Key': function(up, file) {
-						// 若想在前端对每个文件的key进行个性化处理，可以配置该函数
-						// 该配置必须要在unique_names: false，save_key: false时才生效
-						console.log('---Key---');
-						var key = filePath;
-						// do something with key here
-						return key
-					}
-				}
+			//资料头像修改
+			var stuImage = document.getElementById("stuImage");
+			UploadHeadImage.addListener(stuImage, 1, {
+				id: data.studentId, //资料id
+				name: data.studentName //资料名称
+			}, function(successCB) {
+				console.log('上传并修改资料头像，成功的回调' + JSON.stringify(successCB));
+				mui.toast('修改资料头像成功');
+			}, function(errorCB) {
+				console.log('上传并修改资料头像，失败的回调' + JSON.stringify(errorCB));
+				mui.toast(data.RspTxt);
 			});
-			//---七牛上传头像---end---
-
-			//修改学生头像
-			//			mui('.mui-bar-nav').on('tap', '.mui-icon-contact', function() {
-			//				var btnArray = [{
-			//					title: "拍照"
-			//				}, {
-			//					title: "相册"
-			//				}];
-			//				plus.nativeUI.actionSheet({
-			//					title: "选择修改学生头像的方式",
-			//					cancel: "取消",
-			//					buttons: btnArray
-			//				}, function(e) {
-			//					var index = e.index;
-			//					switch(index) {
-			//						case 0: //取消
-			//							break;
-			//						case 1: //拍照
-			//							camera();
-			//							break;
-			//						case 2: //相册
-			//							pick();
-			//							break;
-			//					}
-			//				});
-			//			});
-
-			//拍照
-			function camera() {
-
-				//获取设备默认的摄像头对象
-				var cmr = plus.camera.getCamera();
-
-				//获取摄像头支持的拍照分辨率。“WIDTH*Height”，如“400*800”
-				//属性类型为String[]，若不支持此属性则返回空数组对象
-				var res = cmr.supportedImageResolutions[0]; //[0]:最高的分辨率模式
-
-				//获取摄像头支持的拍照文件格式。文件格式后缀名，如“jpg”、“png”、“bmp”
-				//属性类型为String[]，若不支持此属性则返回空数组对象
-				var fmt = cmr.supportedImageFormats[0];
-
-				console.log('支持的拍照分辨率:' + JSON.stringify(cmr.supportedImageResolutions));
-				console.log('支持的拍照文件格式:' + JSON.stringify(cmr.supportedImageFormats));
-				console.log("选择的拍照分辨率: " + res + ", 选择的文件格式: " + fmt);
-
-				//进行拍照操作cmr.captureImage( successCB, errorCB, option );
-				//摄像头资源为独占资源，如果其它程序或页面已经占用摄像头，再次操作则失败
-				//successCB: ( CameraSuccessCallback ) 必选 拍照操作成功的回调函数
-				//errorCB: ( CameraErrorCallback ) 可选 拍照操作失败的回调函数
-				//option: ( CameraOption ) 必选 摄像头拍照参数
-				cmr.captureImage(function(capturedFile) {
-						//拍照成功的回调
-						//capturedFile ：图片的路径
-						//显示等待窗口
-						plus.nativeUI.showWaiting('正在加载中');
-						console.log('拍照成功,图片的路径为：' + capturedFile);
-						//将本地URL路径转换成平台绝对路径
-						//capturedFile = 'file://' + plus.io.convertLocalFileSystemURL(capturedFile);
-						//console.log('转换成平台绝对路径,图片的路径为：' + capturedFile);
-						compressImage(capturedFile) //压缩图片
-					},
-					function(error) {
-						// 拍照失败的回调
-						var code = error.code; // error.code（Number类型）获取错误编码
-						var message = error.message; // error.message（String类型）获取错误描述信息。
-						if(code !== 11) {
-							mui.toast('拍照失败！' + '错误编码：' + code + ' 描述信息：' + message, '拍照失败');
-							console.log('拍照失败！' + JSON.stringify(error));
-						} else {
-							console.log('未拍取图片');
-						}
-					}, {
-						//						resolution: res,
-						//						format: fmt
-					}
-				);
-			}
-
-			//相册
-			function pick() {
-				//从系统相册选择文件（图片或视频）plus.gallery.pick( successCB, errorCB, option );
-				//succesCB: ( GalleryPickSuccessCallback | GalleryMultiplePickSuccessCallback ) 必选 从系统相册中选择文件完成后的回调函数
-				//单选时通过GalleryPickSuccessCallback回调函数返回选择的图片或视频文件路径，多选时通过GalleryMultiplePickSuccessCallback回调函数返回图片或视频文件路径。
-				//errorCB: ( GalleryErrorCallback ) 可选 从系统相册中选择文件操作错误的回调函数
-				//option: ( GalleryOptions ) 可选 设置选择文件的参数
-				plus.gallery.pick(function(file) {
-						//从相册选取图片成功的回调
-						//file: ( String ) 必选 选择的图片或视频文件路径
-						//显示等待窗口
-						plus.nativeUI.showWaiting('正在加载中');
-						console.log('从相册选取图片成功,图片的路径为：' + file);
-						openImage(file); //打开新页面查看图片
-					}, function(error) {
-						//从相册选取图片失败的回调
-						var code = error.code; // 错误编码
-						var message = error.message; // 错误描述信息
-						if(code != 12) {
-							mui.toast('从相册选取图片失败！' + '错误编码：' + code + '描述信息：' + message);
-							console.log('从相册选取图片失败！' + JSON.stringify(error));
-						} else {
-							console.log('未选取图片');
-						}
-					}
-					//, option
-					//设置选择文件的参数
-					//animation: (Boolean 类型 )是否显示系统相册文件选择界面的动画
-					//filename: (String 类型 )选择文件保存的路径
-					//filter: (GalleryFilter 类型 )相册中选择文件类型过滤器
-					//系统相册选择器中可选择的文件类型，可设置为仅选择图片文件（“image”）、视频文件（“video”）或所有文件（“none”），默认值为“image”。
-				);
-			}
-
-			//压缩图片并且在新页面显示压缩后的图片
-			function compressImage(filepath) {
-				//图片压缩转换，plus.zip.compressImage( options, successCB, errorCB);
-				//options: ( CompressImageOptions ) 必选
-				//图片压缩转换的参数
-				//successCB: ( CompressImageSuccessCallback ) 可选
-				//图片压缩转换操作成功回调，操作成功时调用。
-				//errorCB: ( ZipErrorCallback ) 可选
-				//图片压缩转换操作失败回调，操作失败时调用。
-				plus.zip.compressImage({
-						src: filepath,
-						dst: filepath,
-						overwrite: true
-					},
-					function(event) {
-						//图片压缩成功
-						var target = event.target; // 压缩转换后的图片url路径，以"file://"开头
-						var size = event.size; // 压缩转换后图片的大小，单位为字节（Byte）
-						var width = event.width; // 压缩转换后图片的实际宽度，单位为px
-						var height = event.height; // 压缩转换后图片的实际高度，单位为px
-						openImage(target); //打开新页面查看图片
-					},
-					function(error) {
-						//图片压缩失败
-						var code = error.code; // 错误编码
-						var message = error.message; // 错误描述信息
-						mui.toast('图片压缩失败！' + '错误编码：' + code + '描述信息：' + message);
-						console.log('图片压缩失败！' + JSON.stringify(error));
-						//关闭等待窗口
-						plus.nativeUI.closeWaiting();
-					});
-			}
-
-			/**
-			 * 打开新页面查看选择的图片
-			 * @param {Object} path 图片路径
-			 */
-			function openImage(path) {
-				mui.openWindow({
-					url: 'studentpersonalimge.html',
-					id: 'studentpersonalimge.html',
-					waiting: {
-						autoShow: false,
-					},
-					extras: {
-						path: path, //传入图片路径
-					}
-				});
-			}
-
 		});
 	</script>
 
