--- a/JiaoBaoYun-hb/html/homework/homework-commented.html
+++ b/JiaoBaoYun-hb/html/homework/homework-commented.html
@@ -21,30 +21,30 @@
 			<h1 class="mui-title">评语</h1>
 			<a id="modifyHomework" class="mui-pull-right">修改</a>
 		</header>
-		
-		<div  class="mui-content mui-scroll-wrapper">
+
+		<div class="mui-content mui-scroll-wrapper">
 			<div class="mui-scroll">
 				<ul id="list" class="mui-table-view">
-					<li class="mui-table-view-cell mui-media ">
+					<li class="mui-table-view-cell mui-media">
 						<img id="img" class="mui-media-object mui-pull-left" src="../../image/homework/math.png" />
 						<div class="mui-media-body">
 							<h6 id="homeworkTitle"></h6>
-						<p id="publishDate" class='mui-ellipsis'></p>
-					</div>
-					<div class="mui-media-body">
-						<font id="homeWorkContent"></font> 
-					</div>
-				</li>
-				<li class="mui-table-view-divider">作业评语</li>
-									<li class="mui-table-view-cell  ">
-					<div class="mui-media-body" >
-						<font id="commentContent"></font> 
-					</div>
-				</li>
-			</ul>
+							<p id="publishDate" class='mui-ellipsis'></p>
+						</div>
+						<div class="mui-media-body">
+							<font id="homeWorkContent"></font>
+						</div>
+					</li>
+					<li id="comment" class="mui-table-view-divider">作业评语</li>
+					<li class="mui-table-view-cell">
+						<div class="mui-media-body" style="min-height: 50px;">
+							<font id="commentContent"></font>
+						</div>
+					</li>
+				</ul>
 			</div>
-			</div>
-			<script src="../../js/homework/homework-commented.js"></script>
+		</div>
+		<script src="../../js/homework/homework-commented.js"></script>
 	</body>
 
 </html>
