修改相册拍照失败的回调

--- a/JiaoBaoYun-hb/html/cloud/storage_upload_choose.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_upload_choose.html
@@ -223,11 +223,20 @@
 							// 拍照失败的回调
 							var code = error.code; // error.code（Number类型）获取错误编码
 							var message = error.message; // error.message（String类型）获取错误描述信息。
-							if(code !== 11) {
-								mui.toast('拍照失败！' + '错误编码：' + code + ' 描述信息：' + message + '拍照失败');
-								console.log('拍照失败！' + JSON.stringify(error));
-							} else {
-								console.log('未拍取图片');
+							if(mui.os.ios) {
+								if(code !== 2) {
+									mui.toast('拍照失败！' + '错误编码：' + code + ' 描述信息：' + message, '拍照失败');
+									console.log('拍照失败！' + JSON.stringify(error));
+								} else {
+									console.log('未拍取图片');
+								}
+							} else if(mui.os.android) {
+								if(code !== 11) {
+									mui.toast('拍照失败！' + '错误编码：' + code + ' 描述信息：' + message, '拍照失败');
+									console.log('拍照失败！' + JSON.stringify(error));
+								} else {
+									console.log('未拍取图片:' + JSON.stringify(error));
+								}
 							}
 						}, {
 							format: fmt
@@ -244,11 +253,20 @@
 						//从相册选取图片失败的回调
 						var code = error.code; // 错误编码
 						var message = error.message; // 错误描述信息
-						if(code != 12) {
-							mui.toast('从相册选取图片失败！' + '错误编码：' + code + '描述信息：' + message);
-							console.log('从相册选取图片失败！' + JSON.stringify(error));
-						} else {
-							console.log('未选取图片');
+						if(mui.os.ios) {
+							if(code != -2) {
+								mui.toast('从相册选取图片失败！' + '错误编码：' + code + '描述信息：' + message);
+								console.log('从相册选取图片失败！' + JSON.stringify(error));
+							} else {
+								console.log('未选取图片');
+							}
+						} else if(mui.os.android) {
+							if(code != 12) {
+								mui.toast('从相册选取图片失败！' + '错误编码：' + code + '描述信息：' + message);
+								console.log('从相册选取图片失败！' + JSON.stringify(error));
+							} else {
+								console.log('未选取图片:' + JSON.stringify(error));
+							}
 						}
 					});
 				}
