1.苹果学生动态中的学生头像不能修改 2.家长身份进入云盘点击历史记录 提示参数错误 3.修改学生头像时可以上传非图片格式的资料 4.关联后老师的简介信息过长时无法显示全部 调整了一些界面

--- a/JiaoBaoYun-hb/html/cloud/app_keeprecord.html
+++ b/JiaoBaoYun-hb/html/cloud/app_keeprecord.html
@@ -130,7 +130,7 @@
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<p class="mui-title common-color-white" style="text-align: left;">云盘—记事</p>
-			<img id="history" class="mui-icon mui-pull-right" src="../../image/cloud/record_history.gif" style="height: 40px;width: 40px;" />
+			<img id="history" class="mui-icon mui-pull-right" src="../../image/cloud/record_history.gif" style="height: 40px;width: 40px;display: none;" />
 			<!--<img id="link" class="mui-icon mui-pull-right" src="../../image/cloud/record_link.gif" style="height: 40px;width: 40px;margin-right: 10px;" />-->
 		</header>
 		<div class="mui-content">
@@ -583,10 +583,13 @@
 							//document.getElementById("noqun").style.textAlign = "center";
 							document.getElementById("linewhite").style.display = 'none';
 							document.getElementById("lineblue").style.display = 'none';
+							document.getElementById("history").style.display = 'none';
 							document.body.querySelector('.mui-slider').style.display = 'none';
+
 						} else {
 							//获取到数据
 							//document.getElementById("noqun").style.display = 'none';
+							document.getElementById("history").style.display = 'inline';
 							document.getElementById("linewhite").style.display = 'inline';
 							document.getElementById("lineblue").style.display = 'inline';
 							document.body.querySelector('.mui-slider').style.display = 'inline';
