--- a/JiaoBaoYun-hb/html/homework/homework-publish.html
+++ b/JiaoBaoYun-hb/html/homework/homework-publish.html
@@ -47,22 +47,22 @@
 				<div class="input-erea">
 					<textarea id="publish-content" type="text"  placeholder="输入你要布置的作业内容"></textarea>
 					<div class="publish-extras">
-						<a id="getRecord" class="mui-icon mui-icon-mic"></a>
-						<a id="getImg" class="mui-icon iconfont icon-xiangji"></a>
-						<a id="getVideo" class="mui-icon iconfont icon-shexiangji"></a>
+						<a id="getRecord" class="mui-icon iconfont icon-yuyin"></a>
+						<a id="getImg" class="mui-icon iconfont icon-xiangji1"></a>
+						<a id="getVideo" class="mui-icon iconfont icon-shipin"></a>
 					</div>
 				</div>
 				<!-- History list -->
-				<ul id="history" class="dlist" style="text-align:left;">
+				<!--<ul id="history" class="dlist" style="text-align:left;">
 					<li id="empty" class="ditem-empty">无记录</li>
-				</ul>
+				</ul>-->
 				<div class="mui-input-row">
 					<label>需学生在线提交</label>
-					<div id="onlineSwitch" class="mui-switch mui-active mui-switch-green">
+					<div id="onlineSwitch" class="mui-switch mui-active mui-switch-green online-switch">
 						<div class="mui-switch-handle"></div>
 					</div>
 				</div>
-				<p><span class="mui-icon mui-icon-info"></span>开启在线提交后，学生需提交语音，图片或文字等反馈</p>
+				<p class="extra-info"><span class="mui-icon mui-icon-info"></span>开启在线提交后，学生需提交语音，图片或文字等反馈</p>
 			</form>
 		</div>
 		<div id="play" class="rp">
