替换全部换行符 调整作业详情界面 新注册账号跳过修改密码

--- a/JiaoBaoYun-hb/html/homework/doHomework-stu.html
+++ b/JiaoBaoYun-hb/html/homework/doHomework-stu.html
@@ -85,7 +85,7 @@
 					mui.toast('请输入作业内容');
 					return;
 				}else{
-					tempText = tempText.replace('\n','<br />')
+					tempText = replaceAllBL(tempText);
 				}
 				//所需参数
 				var comData = {
@@ -121,7 +121,7 @@
 					mui.toast('请输入作业内容');
 					return;
 				}else{
-					tempText = tempText.replace('\n','<br />')
+					tempText = replaceAllBL(tempText);
 				}
 				//所需参数
 				var comData = {
