--- a/JiaoBaoYun-hb/html/register/yanZhengMa.html
+++ b/JiaoBaoYun-hb/html/register/yanZhengMa.html
@@ -114,7 +114,7 @@
 									var temp;
 									events.openNewWindowWithData('modify_password.html', temp);
 									events.fireToPageNone('modify_password.html', 'registerPW');
-									events.infoChanged();
+//									events.infoChanged();
 								});
 							} else { //验证码模式登录1
 								console.log('yanzhengma denglu');
