--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -234,6 +234,7 @@
 										tempInfo.ispw = '1';
 										window.myStorage.setItem(window.storageKeyName.PERSONALINFO, tempInfo);
 										mui.toast('修改密码成功');
+										events.infoChanged();
 										events.openNewWindowWithData('../index/index.html', '');
 									} else if(tempFlag == 1) {//在设置里，修改密码
 										var tempInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
